使用新的api